Bug 252542 - Have MomentumEventDispatcher tell its client to start and stop the display refresh callbacks
Summary: Have MomentumEventDispatcher tell its client to start and stop the display re...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Process Model (show other bugs)
Version: WebKit Local Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Simon Fraser (smfr)
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-02-18 21:41 PST by Simon Fraser (smfr)
Modified: 2023-02-20 12:16 PST (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Fraser (smfr) 2023-02-18 21:41:31 PST
Need to get the IPC calls out of MomentumEventDispatcher
Comment 1 Radar WebKit Bug Importer 2023-02-18 21:41:51 PST
<rdar://problem/105639929>
Comment 2 Simon Fraser (smfr) 2023-02-18 21:47:19 PST
Pull request: https://github.com/WebKit/WebKit/pull/10343
Comment 3 EWS 2023-02-20 12:16:33 PST
Committed 260553@main (421c915aa8ae): <https://commits.webkit.org/260553@main>

Reviewed commits have been landed. Closing PR #10343 and removing active labels.