Have MomentumEventDispatcher tell its client to start and stop the display refresh callbacks https://bugs.webkit.org/show_bug.cgi?id=252542 rdar://105639929

Reviewed by Tim Horton.

Have MomentumEventDispatcher delegate to its client the responsibility of starting and
stopping the display refresh callbacks, so that MomentumEventDispatcher can be used in
the UI process in future.

* Source/WebKit/WebProcess/WebPage/EventDispatcher.cpp:
(WebKit::EventDispatcher::EventDispatcher):
(WebKit::EventDispatcher::startDisplayWasRefreshedCallbacks):
(WebKit::EventDispatcher::stopDisplayWasRefreshedCallbacks):
* Source/WebKit/WebProcess/WebPage/EventDispatcher.h:
* Source/WebKit/WebProcess/WebPage/MomentumEventDispatcher.cpp:
(WebKit::MomentumEventDispatcher::MomentumEventDispatcher):
(WebKit::MomentumEventDispatcher::startDisplayLink):
(WebKit::MomentumEventDispatcher::stopDisplayLink):
* Source/WebKit/WebProcess/WebPage/MomentumEventDispatcher.h:

Canonical link: https://commits.webkit.org/260553@main